--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "typescript-cli-starter",
-  "private": true,
-  "version": "1.0.0",
-  "description": "A simple and zero-opinion typescript starter template for building cross-platform command line applications.",
-  "author": "Khalid Zoabi <kzoabi@outlook.com>",
-  "keywords": [
-    "typescript",
-    "cli",
-    "starter"
-  ],
-  "license": "MIT",
-  "main": "./dist/index.js",
-  "bin": "./dist/cli.js",
-  "files": [
-    "dist/**/*",
-    "!dist/**/*.test.js"
-  ],
-  "scripts": {
-    "dev": "ts-node ./src/cli.ts",
-    "clean": "rimraf ./dist/ ./exec/",
-    "build": "npm run clean && tsc",
-    "test": "npm run build && ava --verbose",
-    "bundle": "npm run build && pkg . --out-dir ./exec/"
-  },
-  "devDependencies": {
-    "ava": "^2.2.0",
-    "pkg": "^4.4.0",
-    "rimraf": "^2.6.3",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "commander": "^2.20.0"
-  }
+	"name": "typescript-cli-starter",
+	"private": true,
+	"version": "1.0.0",
+	"description": "A simple and zero-opinion typescript starter template for building cross-platform command line applications.",
+	"author": "Khalid Zoabi <kzoabi@outlook.com>",
+	"keywords": [
+		"typescript",
+		"cli",
+		"starter"
+	],
+	"license": "MIT",
+	"main": "./dist/index.js",
+	"bin": "./dist/cli.js",
+	"files": [
+		"dist/**/*",
+		"!dist/**/*.test.js"
+	],
+	"scripts": {
+		"dev": "npx ts-node ./src/cli.ts",
+		"clean": "rimraf ./dist/ ./exec/",
+		"build": "npm run clean && tsc",
+		"test": "ava",
+		"bundle": "npm run build && pkg . --out-dir ./exec/"
+	},
+	"devDependencies": {
+		"pkg": "^5.8.1",
+		"rimraf": "^6.0.1",
+		"ts-node": "^10.9.2"
+	},
+	"dependencies": {
+		"@types/commander": "^2.12.2",
+		"commander": "^12.1.0",
+		"isomorphic-unfetch": "^4.0.2",
+		"log-update": "^6.1.0",
+		"ora": "^8.1.0",
+		"sql-formatter": "^15.4.1",
+		"typescript": "^5.5.4"
+	}
 }
